<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorGrey"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.mancj.materialsearchbar.MaterialSearchBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchBar"
            android:layout_alignParentTop="true"
            app:mt_speechMode="false"
            app:mt_hint="Ingresa nombre producto"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_product"
            android:scrollbars="vertical"
            />


    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_playlist_add_black_24dp"
        />
</RelativeLayout>
