...
                android:layout_weight="0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/product_name"
                    android:text="Nombre Tienda"
                    android:textColor="@android:color/white"
                    android:background="#4f0e0d0e"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_weight="8"
...
