...
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="300"
                app:met_primaryColor="@color/colorPrimary"
                app:met_singleLineEllipsis="true"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtPrice"
                android:hint="Precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:text=""
                android:textColor="@color/colorPrimary"
...
